syntax = "proto3";
package pb;

service JWT {
    rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse) {
    }
    rpc ParseToken(ParseTokenRequest) returns (ParseTokenResponse) {
    }
}

message GenerateTokenRequest {
    string Email = 1;
    string Role = 2;
}

message GenerateTokenResponse {
    string Token = 1;
    string Err = 2;
}

message ParseTokenRequest {
    string Token = 1;
}

message ParseTokenResponse {
    Claims Claims = 1;
    string err = 2;
}

message Claims {
    int64 Exp = 1;
    int64 Iat = 2;
    string Email = 3;
    string Role = 4;
}
